--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 	<a class="site-title" href="/indexUser.html">CareerTracker</a>
+	
 </header>
 <main class="wide-card">
 	<h2>User Dashboard</h2>
@@ -21,10 +22,8 @@
 	<div class="spaced">
 		<a href="/displayJobApplication.html"><button>Job Applications</button></a>
 	</div>
-
-	<div class="spaced">
-		<button id="logoutBtn">Logout</button>
-	</div>
+	<div>	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
+</div>
 </main>
 <footer>
 	<p>© 2026 CareerTracker</p>
@@ -64,6 +63,9 @@
     window.location.href = '/index.html';
   });
 })();
+</script>
+</body>
+</html>
 </script>
 </body>
 </html>
