fixed every page for securty and using cookies

--- a/src/main/resources/static/indexCompany.html
+++ b/src/main/resources/static/indexCompany.html
@@ -9,7 +9,6 @@
 <body>
 <header>
 	<a class="site-title" href="/indexCompany.html">CareerTracker</a>
-	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
 </header>
 
 <main class="wide-card">
@@ -23,6 +22,10 @@
 	<div class="spaced">
 		<a href="/displayJobPost.html"><button class="btn">Job Posts</button></a>
 	</div>
+
+  <div class="spaced">
+    	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
+  </div>
 </main>
 
 <footer>
