--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -22,7 +22,7 @@
 	<div class="spaced">
 		<a href="/displayJobApplication.html"><button>Job Applications</button></a>
 	</div>
-	<div>	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
+	<div class="spaced">	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
 </div>
 </main>
 <footer>
