final fixes for cookies

--- a/src/main/resources/static/indexCompany.html
+++ b/src/main/resources/static/indexCompany.html
@@ -24,7 +24,7 @@
 	</div>
 
   <div class="spaced">
-    	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
+    	<button id="logoutBtn" class="btn">Logout</button>
   </div>
 </main>
 
