--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -16,14 +16,15 @@
 	<p>Welcome, user. Use the navigation to manage your data.</p>
 
 	<div class="spaced">
-		<a href="/profileUser.html"><button>View profile</button></a>
+		<a href="/profileUser.html"><button class="btn">View profile</button></a>
 	</div>
 
 	<div class="spaced">
-		<a href="/displayJobApplication.html"><button>Job Applications</button></a>
+		<a href="/displayJobApplication.html"><button class="btn">Job Applications</button></a>
 	</div>
-	<div class="spaced">	<button id="logoutBtn" class="btn" style="float:right">Logout</button>
-</div>
+	<div class="spaced">	
+		<button id="logoutBtn" class="btn">Logout</button>
+	</div>
 </main>
 <footer>
 	<p>© 2026 CareerTracker</p>
