fixed createJobApplication.html with cookies logic

--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -58,7 +58,7 @@
     }
     // Clear localStorage entries (keep loggedId optional)
     localStorage.removeItem('loggedId');
-    localStorage.removeItem('loggenId');
+    localStorage.removeItem('type');
 
     // redirect to home page
     window.location.href = '/index.html';
