--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,11 +12,18 @@
         </header>
 
         <main class="index-landing">
-            <p>Welcome — pick an action:</p>
-            <div class="button-group">
-                <a href="/register.html"><button>Register</button></a>
-                <a href="/login.html"><button>Login</button></a>
-            </div>
+            <section class="hero">
+                <h1>Welcome to CareerTracker</h1>
+                <p class="lead">
+                    CareerTracker connects companies and job-seekers: companies create and manage job posts,
+                    review applicants and schedule interviews; users browse openings, apply and track interview progress.
+                </p>
+
+                <div class="button-group">
+                    <a class="btn btn-primary" href="/register.html">Register</a>
+                    <a class="btn btn-secondary" href="/login.html">Login</a>
+                </div>
+            </section>
         </main>
 
         <footer>
